src/x11window.cpp
@@ -311,6 +311,7 @@ X11Window::X11Window()
     m_syncRequest.lastTimestamp = xTime();
     m_syncRequest.enabled = false;
     m_syncRequest.pending = false;
+    m_syncRequest.acked = false;
     m_syncRequest.interactiveResize = false;
 
     // Set the initial mapping state
@@ -3039,11 +3040,14 @@ void X11Window::ackSync()
         return;
     }
 
+    m_syncRequest.acked = true;
     if (m_syncRequest.timeout) {
         m_syncRequest.timeout->stop();
     }
 
-    finishSync();
+    if (!waylandServer()) {
+        finishSync();
+    }
     setAllowCommits(true);
 }
 
@@ -3065,6 +3069,8 @@ void X11Window::finishSync()
         moveResize(moveResizeGeometry());
         updateWindowPixmap();
     }
+
+    m_syncRequest.acked = false;
 }
 
 bool X11Window::belongToSameApplication(const X11Window *c1, const X11Window *c2, SameApplicationChecks checks)
@@ -3937,6 +3943,19 @@ void X11Window::handleXwaylandScaleChanged()
     // while KWin implicitly considers the window already resized when the scale changes,
     // this is needed to make Xwayland actually resize it as well
     resize(moveResizeGeometry().size());
+}
+
+void X11Window::handleCommitted()
+{
+    if (surface()->isMapped()) {
+        if (m_syncRequest.acked) {
+            finishSync();
+        }
+
+        if (!m_syncRequest.enabled) {
+            setReadyForPainting();
+        }
+    }
 }
 
 void X11Window::setAllowCommits(bool allow)
@@ -4820,7 +4839,7 @@ void X11Window::leaveInteractiveMoveResize()
 
 bool X11Window::isWaitingForInteractiveResizeSync() const
 {
-    return m_syncRequest.enabled && m_syncRequest.pending && m_syncRequest.interactiveResize;
+    return m_syncRequest.enabled && m_syncRequest.interactiveResize && (m_syncRequest.pending || m_syncRequest.acked);
 }
 
 void X11Window::doInteractiveResizeSync(const QRectF &rect)
@@ -4989,20 +5008,17 @@ void X11Window::updateWindowPixmap()
 
 void X11Window::associate()
 {
-    auto handleMapped = [this]() {
-        if (!m_syncRequest.enabled) { // cannot detect complete redraw, consider done now
+    if (surface()->isMapped()) {
+        if (m_syncRequest.acked) {
+            finishSync();
+        }
+
+        if (!m_syncRequest.enabled) {
             setReadyForPainting();
         }
-    };
-
-    if (surface()->isMapped()) {
-        handleMapped();
-    } else {
-        // Queued connection because we want to mark the window ready for painting after
-        // the associated surface item has processed the new surface state.
-        connect(surface(), &SurfaceInterface::mapped, this, handleMapped, Qt::QueuedConnection);
     }
 
+    connect(surface(), &SurfaceInterface::committed, this, &X11Window::handleCommitted);
     m_pendingSurfaceId = 0;
 }
 
